# CICD_CPP

./: .gitignore  CMakeLists.txt  README.md  TestJava.java  main.java
.github/workflows/: build.yml  buildJava.yml  buildcpp.yml  cmake.yml  linux.yml  windows.yml
cmake/modules/: FindCppUnit.cmake
my-cpp-project/: README.md
my-cpp-project/.github/workflows/: build.yml
src/: CMakeLists.txt
tests/: CMakeLists.txt  helloTest.cpp
